# my-sov-rollup-starter

./: .gitignore  Cargo.toml  README.md  celestia_config.toml
crates/provers/risc0/: Cargo.toml  build.rs
crates/provers/risc0/guest-celestia/: Cargo.toml
crates/provers/risc0/guest-mock/: Cargo.toml
crates/rollup/: Cargo.toml  Makefile
crates/rollup/src/: celestia_rollup.rs  mock_rollup.rs
crates/rollup/tests/: test.rs
crates/stf/: Cargo.toml
crates/stf/src/: genesis_config.rs  hooks.rs  lib.rs  runtime.rs
docker/credentials/: bridge-0.jwt
module-implementations/sov-nft/: Cargo.toml
module-implementations/sov-nft/src/: address.rs  call.rs  collection.rs  genesis.rs  lib.rs  nft.rs  query.rs  utils.rs
test-data/keys/: kobakaku_2_private_key.json  kobakaku_private_key.json
test-data/requests/nft/: create_collection.json  update_collection.json
