[workspace]
resolver = "2"
members = [
    "crates/rollup",
    "crates/stf",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["kobakaku"]

[workspace.dependencies]
### sovereign-sdk
# Adapters
sov-mock-da = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-celestia-adapter = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-risc0-adapter = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# Full Node
sov-prover-storage-manager = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-stf-runner = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-db = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-sequencer = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# Module System
sov-modules-rollup-blueprint = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-modules-api = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-state = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-modules-stf-blueprint = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-accounts = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-sequencer-registry = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
sov-bank = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }
# Rollup Interface
sov-rollup-interface = { git = "https://github.com/kobakaku/sovereign-sdk", rev = "669d5d33f6ec5c057e5ae4fd6441d3e79b29914d" }

### sovereign-rollup
# Module System
sov-nft = { git = "https://github.com/kobakaku/sovereign-rollup.git", rev = "f921a3dad211fd4add4a138512902da453a9d07d" }
# sov-bank = { git = "https://github.com/kobakaku/sovereign-rollup.git", rev = "f921a3dad211fd4add4a138512902da453a9d07d" }

serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
anyhow = "1.0.68"
clap = { version = "4.4.10", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.71"
jsonrpsee = { version = "0.20.1", features = ["jsonrpsee-types"] }
borsh = { version = "0.10.3", features = ["rc", "bytes"] }
schemars = { version = "0.8.16", features = ["derive"] }
tempfile = "3.8"

risc0-build = "0.19"

[patch.crates-io]
# To apply the v0.19 build script downlaod issue hotfix.
risc0-circuit-recursion = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-zkvm-platform = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }
risc0-circuit-rv32im = { git = "https://github.com/neysofu/risc0-hotfixes", rev = "v0.19.2-hotfix" }