[package]
name = "sov_rollup_starter"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["mock_da"]
mock_da = []
celestia_da = []

[[bin]]
name = "node"
path = "src/bin/node.rs"
