[package]
name = "stf-starter"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
sov-modules-api = { workspace = true }
sov-state = { workspace = true }
sov-accounts = { workspace = true }
sov-bank = { workspace = true }
sov-sequencer-registry = { workspace = true }
sov-mock-da = { workspace = true }
sov-modules-stf-blueprint = { workspace = true }
sov-stf-runner = { workspace = true }
sov-rollup-interface = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
borsh = { workspace = true }
jsonrpsee = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
default = []
native = ["clap","serde_json","jsonrpsee","anyhow"]