[package]
name = "stf-starter"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
sov-modules-api = { workspace = true }
sov-state = { workspace = true }
sov-accounts = { workspace = true }
sov-bank = { workspace = true }
sov-sequencer-registry = { workspace = true }
sov-mock-da = { workspace = true }
sov-modules-stf-blueprint = { workspace = true }
sov-stf-runner = { workspace = true }
sov-sequencer = { workspace = true, optional = true }
sov-rollup-interface = { workspace = true }
sov-nft = { workspace = true }

serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"], optional = true }
borsh = { workspace = true, features = ["rc", "bytes"] }
jsonrpsee = { workspace = true, features = ["jsonrpsee-types"], optional = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[features]
default = ["serde"]
native = [
    "sov-modules-api/native",
    "sov-accounts/native",
    "sov-bank/native",
    "sov-sequencer-registry/native",
    "sov-mock-da/native",
    "sov-modules-stf-blueprint/native",
    "sov-stf-runner/native",
    "serde_json",
    "jsonrpsee",
    "sov-sequencer",
    "clap",
    "serde",
]
serde = [
    "sov-accounts/serde",
    "sov-bank/serde",
    "sov-modules-api/serde",
    "sov-sequencer-registry/serde",
]